more TODO items

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,7 @@
+- do example of two processes.
+- do example of python with pip.
+- do example of python as web server.
 - do example of how to run docker with the process in it not root.
 	the idea is to run a python process to print os.geteuid()
+- do example of complex build process.
+- do example of building stuff on top of a distribution (say ubuntu).
