another exercise idea

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,4 @@
 	but without access from the outside machine.
 - example of passing environment variables to make images behave differently
 	as containers (--env to the "docker run" command) 
+- docker inspect exercise.
