more execise ideas

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,10 @@
+exercises for git course for sqlink
+===================================
+Maven build in docker
+config jvm with docker
+add certificates to docker image
+example of how to allow remote access to a running docker container
+
 - do example of complex build process.
 - exercise of postmortem. 
 - enter a running container
